se sube altas de horas (en proceso de modificacion)

--- a/views/sueldos/abm_horas.html
+++ b/views/sueldos/abm_horas.html
@@ -1,28 +1,24 @@
 {{extend 'layout.html'}}
-<div class="row">
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-</div>
-<div class="row">
-  <div class="col-md-8">.col-md-8</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-6">.col-md-6</div>
-  <div class="col-md-6">.col-md-6</div>
-</div>
+<h1>Horas-Altas</h1>
+
+<form class="form-horizontal">
+
+          <div class="form-group">
+            <label for="campo_cliente" class="col-sm-3 control-label">Numero de Legajo</label>
+            <div class="col-sm-3">
+                <input type="integer" class="form-control" id="campo_Numero_Legajo" placeholder="0000000">
+            </div>
+              
+              
+            <label for="campo_fecha" class="col-sm-2 control-label">Mes Trabajado</label>
+            <div class="col-sm-3">
+                <input type="date" class="form-control" id="campo_fecha" placeholder="">
+            </div>
+              </div>
+              <label for="campo_fecha" class="col-sm-3 control-label">Numero de Semana</label>
+            <div class="col-sm-1">
+                <input type="integer" class="form-control" id="campo_fecha" placeholder="1"> 
+          </div>
+           </div>
+
+</form>
