--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -60,8 +60,7 @@
             <div class="col-sm-2">
                 <input type="text" class="form-control" id="campo_cat" placeholder="Maestranza">
             </div>
-
-          </div>
+    </div>
 
 <div class="form-group">
             <label for="campo_domicilio" class="col-sm-2 control-label">Domicilio</label>
@@ -79,12 +78,11 @@
             <div class="col-sm-2">
                 <input type="text" class="form-control" id="campo_email" placeholder="perez@pascal.com.ar">
             </div>
-    <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
+            <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
             <div class="col-sm-2">
                 <input type="text" class="form-control" id="campo_feing" placeholder="15/01/2016">
             </div>
-
-          </div>
+    </div>
 
 <div class="form-group">
             <label for="campo_tel" class="col-sm-2 control-label">Teléfono</label>
@@ -95,26 +93,162 @@
             <div class="col-sm-2">
                 <input type="text" class="form-control" id="campo_telcel" placeholder="1523239090">
             </div>
-    <label for="campo_est" class="col-sm-2 control-label">Estudia</label>
+            <label for="campo_est" class="col-sm-2 control-label">Estudia</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_est" placeholder="Si">
+                       <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+                       </select>
             </div>
-
-          </div>
+   </div>
 
 <div class="form-group">
             <label for="campo_ccuil" class="col-sm-2 control-label">Constancia de CUIL</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_ccuil" placeholder="Si">
+            <div class="col-sm-1">
+                       <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+                       </select>
             </div>
             <label for="campo_cdni" class="col-sm-2 control-label">Fotocopia DNI</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_cdni" placeholder="No">
+            <div class="col-sm-1">
+                       <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+                       </select>
             </div>
-            <label for="campo_lfam" class="col-sm-2 control-label">Libreta de Familia</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_lfam" placeholder="No">
+            <label for="campo_atemp" class="col-sm-2 control-label">Alta Temprana</label>
+            <div class="col-sm-1">
+                       <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+                       </select>
             </div>
-          </div>
-    
+   </div>
+ <div class="form-group">
+            <label for="campo_lfam" class="col-sm-4 control-label">Libreta de Familia</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+ <div class="form-group">
+            <label for="campo_pnach" class="col-sm-4 control-label">Partida Nac. Hijos</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+</div>
+<div class="form-group">
+            <label for="campo_fdnih" class="col-sm-4 control-label">Fotoc. DNI Hijos</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+<div class="form-group">
+            <label for="campo_fdnic" class="col-sm-4 control-label">Fotoc. DNI Cónyuge</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+    <div class="form-group">
+            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Hijos</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+    <div class="form-group">
+            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Cónyuge</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+    <div class="form-group">
+            <label for="campo_caregh" class="col-sm-4 control-label">Constancia Alumno Regular Hijo</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+    <div class="form-group">
+            <label for="campo_careg" class="col-sm-4 control-label">Constancia Alumno Regular Empleado</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
+<div class="form-group">
+            <label for="campo_cve" class="col-sm-4 control-label">Currículum Empleado</label>
+            <div class="col-sm-3">
+                       <select class="form-control">
+                          <option>Corresponde</option>
+                          <option>No corresponde</option>
+                       </select>
+            </div>
+              <div class="col-sm-2">
+              <label>
+                <input type="checkbox"> Presentado
+              </label>
+            </div>
+    </div>
 </form>
