Se finaliza el Formulario Legajo con HTML & CSS V.2 #44

--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -25,7 +25,10 @@
             </div>
            <label for="campo_cextra" class="col-sm-2 control-label">Corresponde Hs Extras</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" id="campo_cuil" placeholder="SI">
+                <select class="form-control">
+                          <option>Si</option>
+                          <option>No</option>
+               </select>
             </div>
           </div>
 
