dando estilo a reportes

--- a/views/ordencobro/reporte_cobros.html
+++ b/views/ordencobro/reporte_cobros.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <table class="table table-hover table-bordered" >
-   <tr style="background-color:black;color:white;">
+   <tr style="background-color:grey;color:white;">
        <td>#</td>
        <td>Fecha</td>
        <td>Cuenta</td>
