Cambio en head de reportes

--- a/views/ordencobro/reporte_cobros.html
+++ b/views/ordencobro/reporte_cobros.html
@@ -1,4 +1,5 @@
 {{extend 'layout.html'}}
+<h1>Reporte de cobros </h1>
 <table class="table table-hover table-bordered" >
    <tr style="background-color:grey;color:white;">
        <td>#</td>
