--- a/views/sueldos/reportes_empleados.html
+++ b/views/sueldos/reportes_empleados.html
@@ -10,3 +10,6 @@
         </tr> 
        </tbody> 
 </table>
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="reportes_empleados2")}}" enctype="multipart/form-data" method="POST">
+      <button type="submit" class="btn btn-default">Regresar a Criterio de búsqueda</button>
+</form>
