modificacion de la vista previa en css

--- a/views/ventas/vista_previa.html
+++ b/views/ventas/vista_previa.html
@@ -14,7 +14,7 @@
                <select class="form-control" id="campo_cliente">
                   <option>Zia-Ivan Zavala</option>
                   <option>Leyendo Vinos despertando Sentidos- Francisco Rodriguez</option>
-                  <option>Jose Perez</option>
+                  <option>Jorge Benitez</option>
                 </select>
             </div>
             <label for="campo_numero" class="col-sm-2 control-label">NUMERO DE FACTURA</label>
