--- a/views/ventas/abm_ventas.html
+++ b/views/ventas/abm_ventas.html
@@ -9,7 +9,7 @@
                <select class="form-control" id="campo_cliente">
                   <option>Zia-Ivan Zavala</option>
                   <option>Leyendo Vinos despertando Sentidos- Francisco Rodriguez</option>
-                   <option>Jose Perez</option>
+                   <option>Jorge Benitez</option>
                 </select>
             </div>
             <label for="campo_fecha" class="col-sm-1 control-label">FECHA</label>
