manu, vista, controlador de compras

--- a/views/compra/informe_subdiarioa.html
+++ b/views/compra/informe_subdiarioa.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
-<h1>Reportes</h1>
-<form class="form-horizontal" action="{{=URL(c="prueba", f="reporte")}}" enctype="multipart/form-data" method="POST">
+<h1>Reporte</h1>
+<form class="form-horizontal" action="{{=URL(c="compra", f="informe_subdiariob")}}" enctype="multipart/form-data" method="POST">
   <div class="form-group">
     <label for="desde" class="col-sm-2 control-label">Fecha Desde</label>
     <div class="col-sm-10">
