--- a/views/ventas/vista_previa.html
+++ b/views/ventas/vista_previa.html
@@ -25,20 +25,136 @@
                   <option>0003</option>
                 </select>
             </div>
-    </pre>
-<div class="col-xs-6">
-<h1><a href=" "><img alt="" src="logo.png" /> Logo aquí </a></h1>
-</div>
-<div class="col-xs-6 text-right">
-<h1>FACTURA</h1>
-<h1><small>Factura #001</small></h1>
-</div>
- 
-<hr />
- 
-<pre>Sección siguiente
-    
-    
-    
+</pre>
+    <div class="col-xs-6">
+        <h1><IMG SRC="http://www.hersis.cl/servicios/servicio_tecnico.png" WIDTH=178 HEIGHT=180 /> C.V Technical Service</a></h1>
     </div>
+    <div class="col-xs-6 text-right">
+        <h1>FACTURA Tipo: A</h1>
+        <h1><small>N° 0001</small></h1>
+    </div>
+<pre>
+    </div>
+</pre>
+    <div class="row">
+        <div class="col-xs-5">
+            <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4>De: <a href="#">Claudia Vargas</a></h4>
+</div>
+<div class="panel-body">Dirección
+detalles
+más detalles</div>
+</div>
+</div>
+<div class="col-xs-5 col-xs-offset-2 text-right">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4>Para : <a href="#">ZIA- Ivan Zavala</a></h4>
+</div>
+<div class="panel-body">Dirección
+detalles
+más detalles</div>
+</div>
+</div>
+</div>
+<pre><!-- / fin de sección de datos del Cliente  -->
+Detalles de la factura aquí
+</pre>
+<table class="table table-bordered">
+<thead>
+<tr>
+<th>
+<h4>Servicio</h4>
+</th>
+<th>
+<h4>Descripción</h4>
+</th>
+<th>
+<h4>Hrs / Cantidad</h4>
+</th>
+<th>
+<h4>Tarifa / Precio</h4>
+</th>
+<th>
+<h4>Sub-Total</h4>
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Artículo</td>
+<td><a href="#"> Título de su artículo aquí </a></td>
+<td class=" text-right ">-</td>
+<td class=" text-right ">200.00 €</td>
+<td class=" text-right ">200.00 €</td>
+</tr>
+<tr>
+<td>Plantilla de diseño</td>
+<td><a href="#"> Detalles del proyecto aquí </a></td>
+<td class="text-right">10</td>
+<td class="text-right ">75.00 €</td>
+<td class="text-right ">750.00 €</td>
+</tr>
+<tr>
+<td>Desarrollo</td>
+<td><a href="#"> Plugin WordPress </a></td>
+<td class="text-right ">5</td>
+<td class="text-right">50.00 €</td>
+<td class="text-right">250.00 €</td>
+</tr>
+</tbody>
+</table>
+<pre>Sección Totales
+</pre>
+<div class="row text-right">
+<div class="col-xs-3 col-xs-offset-7"><strong>
+Sub Total:
+Impuestos (IVA 21%):
+Total:
+</strong></div>
+<div class="col-xs-2"><strong>
+1,200.00 €
+252.00 €
+1,452.00 €
+</strong></div>
+</div>
+<pre>Sección detalles de pago
+<div class="row">
+<div class = "col-xs-5">
+datos bancarios
+</ div>
+<div class="col-xs-7">
+datos de contacto
+</div>
+</div>
+<div class="panel panel-info">
+<div class="panel-heading">
+<h4>Datos bancarios</h4>
+</div>
+<div class="panel-body">
+ Su nombre
+ Nombre del banco
+ SWIFT: -------
+ Número de cuenta: 12345678
+ IBAN: ------</div>
+</div>
+</div>
+<div class="span7">
+<div class="panel panel-info">
+<div class="panel-heading">
+<h4> Datos de contacto </h4>
+<div class=" panel-body ">
+ Email: usted@ejemplo.com
+ Móvil: +92123456789
+ Twitter: <a href="https://twitter.com/suTwitter">@suTwitter</a> |Suweb: <a href="http://www.suweb.com/author/usted"> http: //www. suweb.com/author/usted / </a>
+<h4><small> El pago debe ser por transferencia bancaria </h4>
+</div>
+</div>
+</div>
+<style>@import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+  body, h1, h2, h3, h4, h5, h6{
+    font-family: 'Bree Serif', serif;
+  }
+  </style>
 </form>
