--- a/views/ventas/abm_ventas.html
+++ b/views/ventas/abm_ventas.html
@@ -34,5 +34,12 @@
         <div class="col-md-3">
           <button type="submit" class="btn btn-default">AGREGAR PRODUCTO</button>
         </div>
-  </div>
+    </div>
+</form>
+    <form class="form-horizontal" action="{{=URL(c="ventas", f="abm_clientes")}}" enctype="multipart/form-data" method="POST">
+    <div class="form-group">
+        <div class="col-md-3">
+          <button type="submit" class="btn btn-default">CLIENTE NUEVO</button>
+        </div>
+        </div>
 </form>
