--- a/views/compra/formulario_proveedores.html
+++ b/views/compra/formulario_proveedores.html
@@ -114,7 +114,7 @@
     </form>
 <center>
     
-        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="abm_proveedor",vars={"id":1,"nombre":"mark"})}}">Guardar</a>
+        <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="listado_proveedor",vars={"id":1,"nombre":"mark"})}}">MOATRAR EN LISTA</a>
         <a class="btn btn-default" role="button" href="{{=URL(c="compra",f="formulario_proveedores",vars={"id":1,"nombre":"mark"})}}">Cancelar</a>
 </center>
 
