--- a/views/ventas/abm_ventas.html
+++ b/views/ventas/abm_ventas.html
@@ -4,7 +4,7 @@
 
 <form class="form-horizontal" action="{{=URL(c="ventas", f="detalle_ventas")}}" enctype="multipart/form-data" method="POST">
 <div class="form-group">
-            <label for="campo_cliente" class="col-sm-2 control-label">CLIENTE</label>
+            <label for="campo_cliente" class="col-sm-1 control-label">CLIENTE</label>
             <div class="col-sm-2">
                <select class="form-control" id="campo_cliente">
                   <option>Zia-Ivan Zavala</option>
@@ -12,6 +12,19 @@
                    <option>Jorge Benitez</option>
                 </select>
             </div>
+            <label for="factura" class="col-sm-1 control-label">FACTURA</label>
+            <div class="col-sm-1">
+               <select class="form-control" id="factura">
+                  <option>A</option>
+                  <option>B</option>
+               </select>
+            </div>
+            <label for="campo_numero_comprobante" class="col-sm-2 control-label">N° DE COMPROBANTE</label>
+            <div class="col-sm-2">
+                <input type="number" class="form-control" id="campo_numero_comprobante">
+            </div>
+    </div>
+    <div class="form-group">
             <label for="campo_fecha" class="col-sm-1 control-label">FECHA</label>
             <div class="col-sm-2">
                 <input type="date" class="form-control" id="campo_fecha" placeholder="Data input">
@@ -23,9 +36,11 @@
                   <option>Credito</option>
                 </select>
             </div>
-            </div>
+    </div>
     <div class="form-group">
-        <label for="campo_obs" class="col-sm-2 control-label">OBSERVACIONES</label>
+        <label for="campo_obs" class="col-sm-1 control-label">OBSERVACIONES</label>
+    </div>
+    <div class="form-group">
         <div class="col-sm-6">
            <textarea class="form-control" id="campo_obs" rows="3"></textarea>
         </div>
